# corebird

./: ._vimrc  .gitignore  0001-Add-gtk4sink.patch  CMakeLists.txt  Corebird.sublime-project  Corebird.sublime-workspace  Makefile  Makefile.am  PKGBUILD  README  README.md  Spec.markdown  autogen.sh  cmake_uninstall.cmake.in  compile-resources.sh  config.h.meson  configure.ac  corebird.gresource.xml  crap.txt  meson.build  meson_options.txt  org.baedert.corebird.gschema.xml  org.baedert.corebird.next.json  resources.xml  todo.md
assets/: CMakeLists.txt  Makefile.am  render-graphics.sh  render-icons.sh  render.sh
assets/128x128/: Makefile.am
assets/16x16/: Makefile.am
assets/24x24/: Makefile.am
assets/32x32/: Makefile.am
assets/48x48/: Makefile.am
assets/64x64/: Makefile.am
assets/96x96/: Makefile.am
assets/icons/: Makefile.am
data/: .gitignore  CMakeLists.txt  Makefile.am  corebird-catalog.xml  corebird.1  corebird.appdata.xml  corebird.appdata.xml.in  corebird.desktop  meson.build  org.baedert.corebird.appdata.xml.in  org.baedert.corebird.desktop.in  org.baedert.corebird.desktop.in.in  org.baedert.corebird.gschema.xml  org.baedert.corebird.gschema.xml.in  org.baedert.corebird.service.in  render-icons.sh
data/128x128/: Makefile.am
data/24x24/: Makefile.am
data/256x256/: Makefile.am
data/48x48/: Makefile.am
data/hicolor/: Makefile.am
data/symbolics/: Makefile.am
examples/: .gitignore  Makefile.am  ab_widget.vala  accountdialog.vala  activities.vala  aib.vala  crop_dialog.vala  lle.vala  meson.build  mm_widget.vala  tle  tle.vala  tweetstates.vala
librest/rest/: Makefile.am  glib-compat.c  glib-compat.h  oauth-proxy-call.c  oauth-proxy-private.h  oauth-proxy.c  oauth2-proxy-call.c  oauth2-proxy-private.h  oauth2-proxy.c  rest-main.c  rest-param.c  rest-params.c  rest-private.h  rest-proxy-auth-private.h  rest-proxy-auth.c  rest-proxy-call-private.h  rest-proxy-call.c  rest-proxy.c  sha1.c  sha1.h
po/: .gitignore  CMakeLists.txt  LINGUAS  Makevars  POTFILES  POTFILES.in  POTFILES.skip  ach.po  af.po  af_ZA.po  ak.po  ar.po  ast.po  ca.po  ca@valencia.po  ca_ES.po  corebird.pot  de.po  de_CH.po  en_AU.po  en_GB.po  en_US.mo  en_US.po  eo.po  es.po  es_419.po  es_ES.po  es_MX.po  es_US.po  es_VE.po  fa.po  fi.po  fr.po  ga.po  gl.po  hi.po  hi_IN.po  hu.po  id.po  id_ID.po  (+27 more)
src/: Account.vala  AccountManager.vala  AccountService.vala  Benchmark.vala  CMakeLists.txt  CbActivity.h  CbActivityModel.c  CbActivityModel.h  CbAnimation.c  CbAnimation.h  CbAspectImage.c  CbAspectImage.h  CbAvatarCache.c  CbAvatarCache.h  CbBadgeRadioButton.c  CbBadgeRadioButton.h  CbBundle.c  CbBundle.h  CbBundleHistory.c  CbBundleHistory.h  CbComposeImages.c  CbComposeImages.h  CbComposeJob.c  CbComposeJob.h  CbDeltaUpdater.c  CbDeltaUpdater.h  CbEmojiChooser.c  CbEmojiChooser.h  CbFilter.c  CbFilter.h  CbGtkCompat.h  CbMainWindow.c  CbMainWindow.h  CbMaxSizeContainer.c  CbMaxSizeContainer.h  CbMedia.c  CbMedia.h  CbMediaDownloader.c  CbMediaDownloader.h  CbMediaImageWidget.c  (+116 more)
src/async/: Barrier.vala  Collect.vala  ComposeJob.vala
src/containers/: FavoriteContainer.vala  MentionsContainer.vala  SearchContainer.vala  StreamContainer.vala  TweetContainer.vala
src/egglistbox/: CMakeLists.txt  egg-list-box-uninstalled.pc  egg-list-box.c  egg-list-box.h  egglistbox.vapi
src/libgd/: gd-stack.c  gd-stack.h  gd-stack.vapi
src/libtl/: data.h  libtweetlength.c  libtweetlength.h
src/list/: AccountListEntry.vala  AddListEntry.vala  DMListEntry.vala  DMThreadEntry.vala  FavImageRow.vala  FilterListEntry.vala  ListListEntry.vala  MissingListEntry.vala  NewFollowerEntry.vala  NewListEntry.vala  NotificationListRow.vala  ProgressEntry.vala  SnippetListEntry.vala  StartConversationEntry.vala  TweetListEntry.vala  TweetListEntry2.vala  UserFilterEntry.vala  UserListEntry.vala
src/model/: DMThreadsModel.vala  NotificationItem.vala  NotificationModel.vala  TweetModel.vala
src/rest/: .gitignore  AUTHORS  Makefile.am
src/services/: TweetSplit.vala
src/sql/: Database.vala  InsertQuery.vala  InsertStatement.vala  Query.vala  SelectStatement.vala  Statement.vala  UpdateStatement.vala
src/util/: Benchmark.c  Benchmark.vala  Bundle.vala  BundleHistory.vala  Config.vala.cmake  Config.vala.in  Dirs.vala  IntHistory.vala  QueryBuilder.vala  Tables.vala  TextTransform.vala  TweetUtils.vala  UIBuilder.c  UIBuilder.vala  UserCompletion.vala  UserUtils.vala  Utils.c  Utils.vala  WeakRef.vala  WidgetReplacer.vala
src/widgets/: AccountCreateWidget.vala  AccountInfoWidget.vala  AddImageButton.vala  ArrowBin.vala  BgBox.vala  (+49 more)
tests/: .gitignore  CMakeLists.txt  Config  Makefile.am  Types.vala  __sql_init1.sql  avatar_download.vala  avatarcache.vala  avatardownload.vala  bundlehistory.vala  check_test  check_test.vala  dmmanager.vala  filters.vala  friends.vala  highlighting.vala  hometimeline.vala  inlinemediadownloader.vala  inthistory.vala  meson.build  multimedia.vala  sql.vala  sql_init1.sql  sql_init3.sql  sqlheavy_benchmark  sqlheavy_benchmark.vala  test.db  texttransform.vala  tweet_entities.vala  tweet_length.vala  tweet_parsing.vala  tweetcounter.vala  tweetlength.vala  tweetmodel.vala  tweetparsing.vala  twitteritem.vala  usercompletionmodel.vala  usercounter.vala  userstream.vala  utils.vala
ui/: CMakeLists.txt  Makefile.am  about-dialog.ui  account-create-widget.ui  account-create-widget2.ui  account-dialog.ui  account-info-widget.ui  account-info.ui  account-list-entry.ui  account-switcher-entry.ui  add-filter-dialog.ui  cb-emoji-chooser.ui  compose-window.ui  connection-lost-dialog.ui  dm-list-entry.ui  dm-page.ui  dm-placeholder-box.ui  dm-thread-entry.ui  dm-threads-page.ui  draft-list-entry.ui  filter-list-entry.ui  filter-page.ui  first-run-window.ui  image-crop-dialog.ui  image-dialog.ui  list-info-popover.ui  list-list-entry.ui  list-statuses-page.ui  lists-page.ui  load-more-entry.ui  main-widget.ui  main-window.ui  media-dialog.ui  menu.ui  menus.ui  missing-list-entry.ui  modify-filter-dialog.ui  modify-snippet-dialog.ui  new-list-entry.ui  notification-list-row.ui  (+16 more)
(+103 files in other folders)
