ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = src ui data assets po tests
DIST_SUBDIRS = data assets
EXTRA_DIST = config.rpath  \
						 intltool-extract.in \
						 intltool-merge.in \
						 intltool-update.in

DISTCLEANFILES = \
								 intltool-extract \
								 intltool-merge \
								 intltool-update \
								 po/.intltool-merge-cache

AUTOMAKE_OPTIONS = subdir-objects




